--- a/index.html
+++ b/index.html
@@ -69,23 +69,17 @@
     <!-- Sitemap & RSS -->
     <link rel="sitemap" href="https://vynexmedia.com/sitemap.xml" type="application/xml" />
     
-    <!-- Analytics (Google Tag Manager) - Placeholder -->
-    <!-- Replace GTM_ID with your actual Google Tag Manager container ID -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GTM_ID"></script>
+    <!-- Google Analytics 4 -->
+    <!-- Replace G-XXXXX with your actual GA4 Measurement ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'GTM_ID');
+      gtag('config', 'G-XXXXX');
     </script>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM_ID" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
